--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div>
             <div class="hvr-grow">
-                <button ><a href="#">Go Detail</a></button>
+                <button><a href="resume.html">Go Detail</a></button>
             </div>
             <div>
                 <img src="pictures/profile.jpg" alt="Profile" width="200px" height="200px">
