--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <nav>
-        <h3>Pro-Developer</h3>
+        <h3 class="hvr-wobble-horizontal">Pro-Developer</h3>
         <ul>
-            <li class="hvr-grow home"><a href="home.html" class="fa fa-home">Home</a></li>
+            <li class="hvr-grow"><a href="home.html" class="fa fa-home home">Home</a></li>
             <li class="hvr-grow"><a href="resume.html">Resume</a></li>
             <li class="hvr-grow"><a href="project.html">Projects</a></li>
             <li class="hvr-grow"><a href="hobbies.html">Hobbies</a></li>
