--- a/resume.html
+++ b/resume.html
@@ -10,15 +10,58 @@
 </head>
 <body>
     <nav>
-        <h3>Pro-Developer</h3>
+        <h3 class="hvr-wobble-horizontal">Pro-Developer</h3>
         <ul>
             <li class="hvr-grow"><a href="home.html" class="fa fa-home">Home</a></li>
-            <li class="hvr-grow resume"><a href="resume.html">Resume</a></li>
+            <li class="hvr-grow"><a href="resume.html" class="resume">Resume</a></li>
             <li class="hvr-grow"><a href="project.html">Projects</a></li>
             <li class="hvr-grow"><a href="hobbies.html">Hobbies</a></li>
             <li class="hvr-grow"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     
+
+
+
+
+    
+
+
+
+
+
+    <footer>
+        <div class="foot_container">
+            <pre>
+Tell: 097 326 5165
+E-mail: thon.theng19@gmail.com 
+Position: Web programmer
+(Base on: Html-CSS, Java, Php, Javascript, Kotlin and Python)
+            </pre>
+            <pre>
+                                 Street 371 Phum Tropeang Chhouk 
+                    (Borey Sorla), Sangkat Tek Thla Khan Sen Sok
+                               P.O. Box 511 Phnon Penh, Cambodia
+            </pre>
+        </div>
+        <div class="footer-nav">
+            <ul>
+                <li class="hvr-grow"><a href="home.html" class="fa fa-home">Home</a></li>
+                <li class="hvr-grow"><a href="resume.html">Resume</a></li>
+                <li class="hvr-grow"><a href="project.html">Projects</a></li>
+                <li class="hvr-grow"><a href="hobbies.html">Hobbies</a></li>
+                <li class="hvr-grow"><a href="contact.html" class="contact">Contact</a></li>
+            </ul>
+        </div>
+        <div class="footer_icon">
+            <ul>
+                <li><a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.telegarm.com"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.skype.com"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
+</footer>
 </body>
 </html>
