--- a/contact.html
+++ b/contact.html
@@ -10,15 +10,74 @@
 </head>
 <body>
     <nav>
-        <h3>Pro-Developer</h3>
+        <h3 class="hvr-wobble-horizontal">Pro-Developer</h3>
         <ul>
             <li class="hvr-grow"><a href="home.html" class="fa fa-home">Home</a></li>
             <li class="hvr-grow"><a href="resume.html">Resume</a></li>
             <li class="hvr-grow"><a href="project.html">Projects</a></li>
             <li class="hvr-grow"><a href="hobbies.html">Hobbies</a></li>
-            <li class="hvr-grow contact"><a href="contact.html">Contact</a></li>
+            <li class="hvr-grow"><a href="contact.html" class="contact">Contact</a></li>
         </ul>
     </nav>
-    
+    <div class="container">
+        <div class="form">
+            <form action="#">
+                <h3>Fill this form</h3>
+                <div class="two">
+                    <input type="text" class="hvr-glow" placeholder="First name" required>
+                    <input type="text" class="hvr-glow" placeholder="Last name" required>
+                </div>
+                <div>
+                    <input type="tel" class="hvr-glow" placeholder="Phone number" required minlength="9" maxlength="15">
+                </div>
+                <div>
+                    <input type="email" class="hvr-glow" placeholder="E-mail address" required>
+                </div>
+                <div>
+                    <input type="text" class="hvr-glow" placeholder="Position" required>
+                </div>
+                <div class="two">
+                    <input type="submit" value="Submit" class="hvr-pop">
+                    <input type="reset" value="Reset" class="hvr-pop">
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.0139082838555!2d104.88089491387709!3d11.550859791798866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310951add5e2cd81%3A0x171e0b69c7c6f7ba!2sPasserelles%20Num%C3%A9riques%20Cambodia%20(PNC)!5e0!3m2!1sen!2skh!4v1611710950990!5m2!1sen!2skh" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+    <footer>
+            <div class="foot_container">
+                <pre>
+Tell: 097 326 5165
+E-mail: thon.theng19@gmail.com 
+Position: Web programmer
+(Base on: Html-CSS, Java, Php, Javascript, Kotlin and Python)
+                </pre>
+                <pre>
+                                     Street 371 Phum Tropeang Chhouk 
+                        (Borey Sorla), Sangkat Tek Thla Khan Sen Sok
+                                   P.O. Box 511 Phnon Penh, Cambodia
+                </pre>
+            </div>
+            <div class="footer-nav">
+                <ul>
+                    <li class="hvr-grow"><a href="home.html" class="fa fa-home">Home</a></li>
+                    <li class="hvr-grow"><a href="resume.html">Resume</a></li>
+                    <li class="hvr-grow"><a href="project.html">Projects</a></li>
+                    <li class="hvr-grow"><a href="hobbies.html">Hobbies</a></li>
+                    <li class="hvr-grow"><a href="contact.html" class="contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer_icon">
+                <ul>
+                    <li><a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.telegarm.com"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.skype.com"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+    </footer>
 </body>
 </html>
