--- a/contact.html
+++ b/contact.html
@@ -71,11 +71,11 @@ Position: Web programmer
             </div>
             <div class="footer_icon">
                 <ul>
-                    <li><a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.telegarm.com"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.skype.com"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.telegarm.com" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.skype.com" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
     </footer>
