--- a/resume.html
+++ b/resume.html
@@ -47,19 +47,19 @@ Position: Web programmer
         <div class="footer-nav">
             <ul>
                 <li class="hvr-grow"><a href="home.html" class="fa fa-home">Home</a></li>
-                <li class="hvr-grow"><a href="resume.html">Resume</a></li>
+                <li class="hvr-grow"><a href="resume.html" class="resume">Resume</a></li>
                 <li class="hvr-grow"><a href="project.html">Projects</a></li>
                 <li class="hvr-grow"><a href="hobbies.html">Hobbies</a></li>
-                <li class="hvr-grow"><a href="contact.html" class="contact">Contact</a></li>
+                <li class="hvr-grow"><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="footer_icon">
             <ul>
-                <li><a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.telegarm.com"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.skype.com"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.telegarm.com" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.skype.com" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
             </ul>
         </div>
 </footer>
