To change footer

--- a/project.html
+++ b/project.html
@@ -65,28 +65,26 @@
             </div>
         </div>
     </div>
+
+    <div class="bottom-nav">
+        <ul>
+            <li class="hvr-grow"><a href="home.html" class="fa fa-home">Home</a></li>
+            <li class="hvr-grow"><a href="resume.html">Resume</a></li>
+            <li class="hvr-grow"><a href="project.html" class="project">Projects</a></li>
+            <li class="hvr-grow"><a href="hobbies.html">Hobbies</a></li>
+            <li class="hvr-grow"><a href="contact.html">Contact</a></li>
+        </ul>
+    </div>
     <footer>
         <div class="foot_container">
-            <pre>
-Tell: 097 326 5165
-E-mail: thon.theng19@gmail.com 
-Position: Web programmer
-(Base on: Html-CSS, Java, Php, Javascript, Kotlin and Python)
-            </pre>
-            <pre>
-                                 Street 371 Phum Tropeang Chhouk 
-                    (Borey Sorla), Sangkat Tek Thla Khan Sen Sok
-                               P.O. Box 511 Phnon Penh, Cambodia
-            </pre>
-        </div>
-        <div class="footer-nav">
-            <ul>
-                <li class="hvr-grow"><a href="home.html" class="fa fa-home">Home</a></li>
-                <li class="hvr-grow"><a href="resume.html">Resume</a></li>
-                <li class="hvr-grow"><a href="project.html" class="project">Projects</a></li>
-                <li class="hvr-grow"><a href="hobbies.html">Hobbies</a></li>
-                <li class="hvr-grow"><a href="contact.html">Contact</a></li>
-            </ul>
+            <div>
+                <p>Tell: 097 326 5165<br>E-mail: thon.theng19@gmail.com<br>Position: Web programmer</p>
+            </div>
+            <div class="right">
+                <p>Street 371 Phum Tropeang Chhouk</p>
+                <p>(Borey Sorla), Sangkat Tek Thla Khan Sen Sok</p>
+                <p>P.O. Box 511 Phnon Penh, Cambodia</p>
+            </div>
         </div>
         <div class="footer_icon">
             <ul>
@@ -97,6 +95,6 @@ Position: Web programmer
                 <li><a href="https://www.skype.com" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
             </ul>
         </div>
-</footer>
+    </footer>
 </body>
 </html>
