--- a/hobbies.html
+++ b/hobbies.html
@@ -67,28 +67,25 @@
         </div>
     </div>
 
+    <div class="bottom-nav">
+        <ul>
+            <li class="hvr-grow"><a href="home.html" class="fa fa-home">Home</a></li>
+            <li class="hvr-grow"><a href="resume.html">Resume</a></li>
+            <li class="hvr-grow"><a href="project.html">Projects</a></li>
+            <li class="hvr-grow"><a href="hobbies.html" class="hobbies">Hobbies</a></li>
+            <li class="hvr-grow"><a href="contact.html">Contact</a></li>
+        </ul>
+    </div>
     <footer>
         <div class="foot_container">
-            <pre>
-Tell: 097 326 5165
-E-mail: thon.theng19@gmail.com 
-Position: Web programmer
-(Base on: Html-CSS, Java, Php, Javascript, Kotlin and Python)
-            </pre>
-            <pre>
-                             Street 371 Phum Tropeang Chhouk 
-                (Borey Sorla), Sangkat Tek Thla Khan Sen Sok
-                           P.O. Box 511 Phnon Penh, Cambodia
-            </pre>
-        </div>
-        <div class="footer-nav">
-            <ul>
-                <li class="hvr-grow"><a href="home.html" class="fa fa-home">Home</a></li>
-                <li class="hvr-grow"><a href="resume.html">Resume</a></li>
-                <li class="hvr-grow"><a href="project.html">Projects</a></li>
-                <li class="hvr-grow"><a href="hobbies.html" class="hobbies">Hobbies</a></li>
-                <li class="hvr-grow"><a href="contact.html">Contact</a></li>
-            </ul>
+            <div>
+                <p>Tell: 097 326 5165<br>E-mail: thon.theng19@gmail.com<br>Position: Web programmer</p>
+            </div>
+            <div class="right">
+                <p>Street 371 Phum Tropeang Chhouk</p>
+                <p>(Borey Sorla), Sangkat Tek Thla Khan Sen Sok</p>
+                <p>P.O. Box 511 Phnon Penh, Cambodia</p>
+            </div>
         </div>
         <div class="footer_icon">
             <ul>
