a little bit change

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="css/hover.css">
-    <link rel="stylesheet" href="css/css-contact/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -59,7 +59,7 @@
     <footer>
         <div class="foot_container">
             <div>
-                <p>Tell: 097 326 5165<br>E-mail: thon.theng19@gmail.com<br>Position: Web programmer</p>
+                <p>Tell: 097 44 44 444<br>E-mail: john.smith10@gmail.com<br>Position: Web programmer</p>
             </div>
             <div class="right">
                 <p>Street 371 Phum Tropeang Chhouk</p>
