--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="css/hover.css">
-    <link rel="stylesheet" href="css/css-project/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -19,45 +19,45 @@
             <li class="hvr-grow"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="container">
-        <div class="item">
-            <div class="head">
+    <div class="pro-container">
+        <div class="pro-item">
+            <div class="pro-head">
                 <img src="pictures/bank.jpg" alt="Bank Picture">
             </div>
-            <div class="body">
+            <div class="pro-body">
                 <h3>Core Banking System</h3>
                 <p>
                     Core banking is a banking service provided by a group of networked bank branches where customers may access their bank account and perform basic transactions from any of the member branch offices. ... Core banking functions will include transaction accounts, loans, mortgages and payments.
                 </p>
             </div>
         </div>
-        <div class="item">
-            <div class="head">
+        <div class="pro-item">
+            <div class="pro-head">
                 <img src="pictures/hospital.jpg" alt="Hospital Picture">
             </div>
-            <div class="body">
+            <div class="pro-body">
                 <h3>System In Hospital</h3>
                 <p>
                     A hospital system is a group of hospitals or facilities that work together to deliver services to their communities. Different types of hospital systems have different types of ownership and financial goals.
                 </p>
             </div>
         </div>
-        <div class="item">
-            <div class="head">
+        <div class="pro-item">
+            <div class="pro-head">
                 <img src="pictures/ai.jpg" alt="AI Picture">
             </div>
-            <div class="body">
+            <div class="pro-body">
                 <h3>AI</h3>
                 <p>
                     Artificial intelligence is intelligence demonstrated by machines, unlike the natural intelligence displayed by humans and animals, which involves consciousness and emotionality. The distinction between the former and the latter categories is often revealed by the acronym chosen.
                 </p>
             </div>
         </div>
-        <div class="item">
-            <div class="head">
+        <div class="pro-item">
+            <div class="pro-head">
                 <img src="pictures/system.jpg" alt="system Picture">
             </div>
-            <div class="body">
+            <div class="pro-body">
                 <h3>System In Industry</h3>
                 <p>
                     An industrial system consists of inputs, processes and outputs. ... The inputs are the raw materials, labor and costs of land,transport, power and other infrastructure. The processes include a wide range of activities that convert the raw material into finished products.
