--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
     </div>
     <footer>
         <div class="foot_container">
-            <div>
-                <p>Tell: 097 44 44 444<br>E-mail: john.smith10@gmail.com<br>Position: Web programmer</p>
+            <div class="left">
+                <p>Tell: 097 44 44 444<br>E-mail: thon.theng10@gmail.com<br>Position: Web programmer</p>
             </div>
             <div class="right">
                 <p>Street 371 Phum Tropeang Chhouk</p>
