--- a/hobbies.html
+++ b/hobbies.html
@@ -36,25 +36,25 @@
             </div>
         </div>
         <div class="body-container">
-            <div class="col">
+            <div class="col hvr-underline-from-center">
                 <h3>Sport</h3>
                 <p>
                     Sport is very important for me.<br>I always play football with my friends at the weekend, I like volleyball also. I think as a programmer we can use sport to reduce stress and for keeping our good health.<br>Sometime I go to gym to exercise and discuss with my friends about new technologies and some creative idea to impove.
                 </p>
             </div>
-            <div class="col">
+            <div class="col hvr-underline-from-center">
                 <h3>Movie</h3>
                 <p>
                     I like watching movies.<br>Every weekend night, I go to cinema for watching movie. At those time, it's very important and enjoy because in the film always has some joke and sometime it's a lot of new idea for me. Especailly when I watch movie that related with technologies. I can't sometime to relax my brain with movies.
                 </p>
             </div>
-            <div class="col">
+            <div class="col hvr-underline-from-center">
                 <h3>Trip</h3>
                 <p>
                     When holiday, my family and I like going far from home.<br>We always have a trip duing holiday in idea to relax and to know a lot of places in the world. I think it can help me a lots because I always do it all the time when I have free and I have a fresh feeling. I like campign, moutain climbing and to into forest. In cambodia, sometime I go to the beach.
                 </p>
             </div>
-            <div class="col">
+            <div class="col hvr-underline-from-center">
                 <h3>Design</h3>
                 <p>
                     Designing is very good for all the people to create new things.<br>I like doing it. Normally it's my job as a programmer I have to design to create a good look for my customer, but in my free time I do it also to improve my abilities on my work and it's really enjoy for me. I really happy when I create something new.
@@ -77,8 +77,8 @@
     </div>
     <footer>
         <div class="foot_container">
-            <div>
-                <p>Tell: 097 44 44 444<br>E-mail: john.smith10@gmail.com<br>Position: Web programmer</p>
+            <div class="left">
+                <p>Tell: 097 44 44 444<br>E-mail: thon.theng10@gmail.com<br>Position: Web programmer</p>
             </div>
             <div class="right">
                 <p>Street 371 Phum Tropeang Chhouk</p>
