--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
             <div class="pro-head">
                 <img src="pictures/bank.jpg" alt="Bank Picture">
             </div>
-            <div class="pro-body">
+            <div class="pro-body hvr-forward">
                 <h3>Core Banking System</h3>
                 <p>
                     Core banking is a banking service provided by a group of networked bank branches where customers may access their bank account and perform basic transactions from any of the member branch offices. ... Core banking functions will include transaction accounts, loans, mortgages and payments.
@@ -35,7 +35,7 @@
             <div class="pro-head">
                 <img src="pictures/hospital.jpg" alt="Hospital Picture">
             </div>
-            <div class="pro-body">
+            <div class="pro-body hvr-forward">
                 <h3>System In Hospital</h3>
                 <p>
                     A hospital system is a group of hospitals or facilities that work together to deliver services to their communities. Different types of hospital systems have different types of ownership and financial goals.
@@ -46,7 +46,7 @@
             <div class="pro-head">
                 <img src="pictures/ai.jpg" alt="AI Picture">
             </div>
-            <div class="pro-body">
+            <div class="pro-body hvr-forward">
                 <h3>AI</h3>
                 <p>
                     Artificial intelligence is intelligence demonstrated by machines, unlike the natural intelligence displayed by humans and animals, which involves consciousness and emotionality. The distinction between the former and the latter categories is often revealed by the acronym chosen.
@@ -57,7 +57,7 @@
             <div class="pro-head">
                 <img src="pictures/system.jpg" alt="system Picture">
             </div>
-            <div class="pro-body">
+            <div class="pro-body hvr-forward">
                 <h3>System In Industry</h3>
                 <p>
                     An industrial system consists of inputs, processes and outputs. ... The inputs are the raw materials, labor and costs of land,transport, power and other infrastructure. The processes include a wide range of activities that convert the raw material into finished products.
@@ -77,8 +77,8 @@
     </div>
     <footer>
         <div class="foot_container">
-            <div>
-                <p>Tell: 097 326 5165<br>E-mail: thon.theng19@gmail.com<br>Position: Web programmer</p>
+            <div class="left">
+                <p>Tell: 097 44 44 444<br>E-mail: thon.theng10@gmail.com<br>Position: Web programmer</p>
             </div>
             <div class="right">
                 <p>Street 371 Phum Tropeang Chhouk</p>
