--- a/resume.html
+++ b/resume.html
@@ -25,35 +25,123 @@
 
 
     <div class="re-container">
-        <div class="cl">
+        <div class="cl hvr-glow">
             <div class="cl-left-side">
                 <div class="re-profile">
-                    <img src="pictures/cl-profile.jpg" alt="CL Profile">
-                    <h2>John Smith</h2>
+                    <img src="pictures/resume-profile.jpg" alt="CL Profile">
+                    <h2>THON THENG</h2><br><br><br>
                 </div>
-                <div class="re-intro">
-                    <p><br><br>I am John Smith.<br>I have experience 10 years in programming.<br>Now, I am applying a job to be a staff in your comapny.<br></p>
-                    <h2>Please see my CV and let me know.</h2>
+                <div id="re-intro">
+                    <p><br><br>I am John Smith.<br>I have experience 10 years in programming.<br>Now, I am applying a job to be a staff in your comapny.<br><br><br></p>
+                    <p>
+                        Tell: 097 44 44 444<br>
+                        E-mail: john.smith10@gmail.com<br>
+                        Position: Web programmer<br>
+                    </p>
                 </div>
             </div>
-            <div class="cl-right-side">
+            <div class="cl-right-side  hvr-glow">
+                <p>
+                    THON THENG,<br>
+                    Street 371 Phum Tropeang Chhouk<br>
+                    (Borey Sorla), Sangkat Tek Thla Khan Sen Sok<br>
+                    P.O. Box 511 Phnon Penh, Cambodia<br><br>
 
+                    Date: 30th Jan, 2020.<br><br>
+
+                    Mr. John Smith,<br>
+                    National Infosystems,<br>
+                    257, Park Avenue South,<br>
+                    New York, NY 12345-6789.<br><br>
+
+                    Dear Mr. Smith,<br><br>
+
+                    I am writing to introduce myself to you as a student of Passerelles Numeriques Cambodia (PNC). I’m responding to your advertisement in the local Employment News for want of a software developer for your development section.<br><br>
+
+                    As you can see in the enclosed resume, I have a very strong academic background in operating systems combined with over five years research experience in search engine optimization. My recent internship at Major Infosystems, New York, allowed me to further develop and strengthen my technical skills. I have good hands on programming languages like C, C++, Java and Assembly. I believe that I could make a significant and valuable contribution in your firm.<br><br>
+
+                    I would appreciate the opportunity to discuss how my education and experience will be helpful to you. I will be contacting you tomorrow morning on phone to talk about the possibility of arranging an interview. Thank you for your time and consideration.<br><br>
+
+                    Sincerely,<br><br>
+
+                    THON THENG,<br><br>
+                </p>
             </div>
         </div>
-        <div class="br">
-
-        </div>
+        <div class="br hvr-glow"></div>
         <div class="cv">
-            <div class="cv-left-side">
-                
+            <div class="cv-header">
+                <img src="pictures/resume-profile.jpg" alt="Profile">
+                <h2>THON THENG</h2>
             </div>
-            <div class="cv-right-side">
-                <div class="re-profile">
-                    <img src="pictures/cl-profile.jpg" alt="CL Profile">
-                    <h2>John Smith</h2>
+            <div class="cv-container">
+                <div class="one">
+                    <div class="cv-col hvr-glow">
+                        <h3>Personal Profile</h3>
+                        <div class="cv-content">
+                            <p>My name is: THON THENG<br>I am 20 years old<br>I finished associate degree of IT skill at Passerelles Numeriques Cambodia.</p>
+                        </div>
+                    </div>
+                    <div class="cv-col hvr-glow">
+                        <h3>Education</h3>
+                        <div class="cv-content">
+                            <ul>
+                                <li>2013-2016 I learn at SRM secondary school</li>
+                                <li>2016-2019 I learn at CRV high school</li>
+                                <li>2019-Present: I learn IT major at PNC</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="four">
+                    <div class="cv-col hvr-glow">
+                        <h3>Projects</h3>
+                        <div class="cv-content">
+                            <ul>
+                                <li>Core Banking System</li>
+                                <li>System At Hotel</li>
+                                <li>System At Inadustry</li>
+                                <li>System At Hospital</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="one">
+                    <div class="cv-col hvr-glow">
+                        <h3>Work Experience</h3>
+                        <div class="cv-content">
+                            <ul>
+                                <li>3 years at Technology Service Company</li>
+                                <li>2 years as a technical trainer</li>
+                                <li>3 years in bank</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="cv-col hvr-glow">
+                        <h3>Languages</h3>
+                        <div class="cv-content">
+                            <p>Khmer: Native<br>English: Good<br>Chinese: Good</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="four">
+                    <div class="cv-col hvr-glow">
+                        <h3>Hobbies</h3>
+                        <div class="cv-content">
+                            <ul>
+                                <li>Sport: I like the most</li>
+                                <li>Trip: When I have free time</li>
+                                <li>Movie: Technology movies</li>
+                                <li>Design: Sometime</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="download-button">
+        <a href="pictures/CV.pdf" target="_blank" download>Download</a>
     </div>
 
 
@@ -70,8 +158,8 @@
     </div>
     <footer>
         <div class="foot_container">
-            <div>
-                <p>Tell: 097 44 44 444<br>E-mail: john.smith10@gmail.com<br>Position: Web programmer</p>
+            <div class="left">
+                <p>Tell: 097 44 44 444<br>E-mail: thon.theng10@gmail.com<br>Position: Web programmer</p>
             </div>
             <div class="right">
                 <p>Street 371 Phum Tropeang Chhouk</p>
