--- a/home.html
+++ b/home.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online CV</title>
     <link rel="stylesheet" href="css/hover.css">
-    <link rel="stylesheet" href="css/style-home.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body id="home-body">
     <nav>
         <h3 class="hvr-wobble-horizontal">Pro-Developer</h3>
         <ul>
@@ -19,15 +19,15 @@
             <li class="hvr-grow"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="container">
+    <div class="home-container">
         <div>
-            <div class="hvr-grow">
+            <div class="hvr-grow home-button">
                 <button><a href="resume.html">Go Detail</a></button>
             </div>
-            <div>
+            <div class="home-profile">
                 <img src="pictures/profile.jpg" alt="Profile" width="200px" height="200px">
             </div>
-            <h2>John Smith</h2>
+            <h2>THON THENG</h2>
         </div>
     </div> 
 </body>
