--- a/hobbies.html
+++ b/hobbies.html
@@ -88,11 +88,11 @@
         </div>
         <div class="footer_icon">
             <ul>
-                <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.telegarm.com" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.skype.com" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook hvr-grow" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram hvr-grow" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter hvr-grow" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.telegarm.com" target="_blank"><i class="fa fa-telegram hvr-grow" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.skype.com" target="_blank"><i class="fa fa-skype hvr-grow" aria-hidden="true"></i></a></li>
             </ul>
         </div>
     </footer>
