--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/hover.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body id="home-body">
     <nav>
@@ -20,15 +21,13 @@
         </ul>
     </nav>
     <div class="home-container">
-        <div>
-            <div class="hvr-grow home-button">
-                <button><a href="resume.html">Go Detail</a></button>
-            </div>
-            <div class="home-profile">
-                <img src="pictures/profile.jpg" alt="Profile" width="200px" height="200px">
-            </div>
-            <h2>THON THENG</h2>
+        <div class="hvr-grow home-button animate__animated animate__fadeInLeft animate__delay-1s">
+            <button><a href="resume.html">Go Detail</a></button>
         </div>
+        <div class="home-profile">
+            <img src="pictures/profile.jpg" alt="Profile" width="200px" height="200px" class="animate__animated animate__fadeInLeft">
+        </div>
+        <h2 class="animate__animated animate__fadeInRight">THON THENG</h2>
     </div> 
 </body>
 </html>
