--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
                 <input type="text" class="hvr-glow" placeholder="Position" required>
             </div>
             <div class="two">
-                <input type="submit" value="Submit" class="hvr-pop">
-                <input type="reset" value="Reset" class="hvr-pop">
+                <input type="submit" value="Submit" class="hvr-grow">
+                <input type="reset" value="Reset" class="hvr-grow">
             </div>
         </form>
     </div>
