--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body id="home-body">
-    <nav>
+    <nav style="background-image: none;">
         <h3 class="hvr-wobble-horizontal">Pro-Developer</h3>
         <ul>
             <li class="hvr-grow"><a href="home.html" class="fa fa-home home">Home</a></li>
